<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/change_sex"
        android:textColor="@color/secondary_500"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radio_group_list_of_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tittle"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="12dp">

        <RadioButton
            android:id="@+id/radio_btn_man"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:paddingHorizontal="10dp"
            android:text="@string/man"
            android:textSize="14sp"
            android:textColor="@color/secondary_500"/>

        <RadioButton
            android:id="@+id/radio_btn_woman"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:paddingHorizontal="10dp"
            android:text="@string/woman"
            android:textSize="14sp"
            android:textColor="@color/secondary_500"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group_list_of_sex"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:stateListAnimator="@null"
            android:backgroundTint="@color/primary_350"
            android:text="@string/cancel1"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:stateListAnimator="@null"
            android:text="@string/save"
            android:textAllCaps="false"
            android:enabled="true"/>
    </LinearLayout>

</RelativeLayout>