<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/use_access_code_for_enter"
        android:textColor="@color/secondary_500"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tittle"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:stateListAnimator="@null"
            android:backgroundTint="@color/primary_350"
            android:text="@string/no"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:stateListAnimator="@null"
            android:text="@string/yes"
            android:textAllCaps="false"/>
    </LinearLayout>

</RelativeLayout>