<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Pin_Code_Enter">

    <RelativeLayout
        android:id="@+id/layout_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_simple_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/avatar_form" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/avatar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/secondary_500"
            android:textSize="54sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="@color/secondary_500"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pin_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:src="@drawable/pin_grey"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/pin_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:src="@drawable/pin_grey"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/pin_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:src="@drawable/pin_grey"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/pin_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:src="@drawable/pin_grey"
            tools:ignore="ContentDescription"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/layout_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="36dp">

            <TextView
                android:id="@+id/num_1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="@color/secondary_500"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/num_2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_2"
                android:textColor="@color/secondary_500"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/num_3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_3"
                android:textColor="@color/secondary_500"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_row1"
            android:orientation="horizontal"
            android:paddingHorizontal="36dp">

            <TextView
                android:id="@+id/num_4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_4"
                android:textColor="@color/secondary_500"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/num_5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_5"
                android:textColor="@color/secondary_500"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/num_6"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_6"
                android:textColor="@color/secondary_500"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_row2"
            android:orientation="horizontal"
            android:paddingHorizontal="36dp">

            <TextView
                android:id="@+id/num_7"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_7"
                android:textColor="@color/secondary_500"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/num_8"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_8"
                android:textColor="@color/secondary_500"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/num_9"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_9"
                android:textColor="@color/secondary_500"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_row3"
            android:orientation="horizontal"
            android:paddingHorizontal="36dp">

            <TextView
                android:id="@+id/exit"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/exit1"
                android:textColor="@color/dark_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/num_0"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/secondary_500"
                android:textSize="32sp" />

            <ImageView
                android:id="@+id/backspace"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/ic_backspace"
                android:scaleType="centerInside"
                tools:ignore="ContentDescription"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>