<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/change_email"
        android:textColor="@color/secondary_500"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_below="@+id/tittle"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/enter_email"
        android:textColorHint="@color/primary_200"
        app:endIconMode="clear_text"
        app:endIconTint="@color/primary_500"
        app:errorTextColor="@color/error"
        app:boxStrokeErrorColor="@color/error"
        app:errorIconTint="@color/error">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/secondary_500"
            android:textSize="16sp"
            android:maxLength="25"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_layout"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:stateListAnimator="@null"
            android:text="@string/cancel2"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:stateListAnimator="@null"
            android:text="@string/next"
            android:textAllCaps="false"
            android:enabled="true"/>
    </LinearLayout>

</RelativeLayout>