<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_SignIn">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_500"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingHorizontal="32dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:hint="@string/email"
            android:textColorHint="@color/primary_200"
            app:endIconMode="clear_text"
            app:endIconTint="@color/primary_500"
            app:errorTextColor="@color/error"
            app:boxStrokeErrorColor="@color/error"
            app:errorIconTint="@color/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/secondary_500"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_below="@+id/email_layout"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/primary_200"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/primary_500"
            app:errorTextColor="@color/error"
            app:boxStrokeErrorColor="@color/error"
            app:errorIconTint="@color/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/secondary_500"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_layout"
            android:paddingHorizontal="32dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_centerHorizontal="true"
                android:stateListAnimator="@null"
                android:text="@string/sign_in"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_restore_password"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_below="@+id/btn_sign_in"
                android:stateListAnimator="@null"
                android:text="@string/restore_password"
                android:textAllCaps="false"
                android:textColor="@color/secondary_500" />
        </RelativeLayout>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="64dp"
        android:layout_marginBottom="16dp"
        android:stateListAnimator="@null"
        android:text="@string/sign_up"
        android:textAllCaps="false" />

</RelativeLayout>