<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/change_birthday"
        android:textColor="@color/secondary_500"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tittle"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <DatePicker
            android:id="@+id/dialog_datePicker"
            android:theme="@style/spinnerDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:maxDate=""/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_picker"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_350"
            android:stateListAnimator="@null"
            android:text="@string/cancel1"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:stateListAnimator="@null"
            android:text="@string/save"
            android:textAllCaps="false"
            android:enabled="true"/>
    </LinearLayout>

</RelativeLayout>